return points per each month
