# src/main/java/com/charter/reward/RewardController.java
@@ -1,6 +1,7 @@
 package com.charter.reward;
 
 import com.charter.RewardResponse;
+import com.charter.TotalRewardResponse;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -17,7 +18,7 @@ public class RewardController {
     }
 
     @GetMapping("/{email}/total")
-    public RewardResponse getTotalRewardByEmail(@PathVariable("email") String email) {
+    public TotalRewardResponse getTotalRewardByEmail(@PathVariable("email") String email) {
         return rewardAdapter.calculateTotalReward(email);
     }
 
